--- a/resources/HdsInitTypescriptProjects/lib/package.json
+++ b/resources/HdsInitTypescriptProjects/lib/package.json
@@ -2,8 +2,8 @@
   "name": "@iyio/__PACKAGE_NAME__",
   "version": "0.0.1",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/__PACKAGE_NAME__-index.js",
+  "types": "dist/__PACKAGE_NAME__-index.d.ts",
   "scripts": {
     "watch": "tsc --watch",
     "build": "tsc",
