--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/phillsv87/MeHandyDandyScripts#readme",
   "dependencies": {
     "command-line-args": "^5.2.1",
-    "json5": "^2.2.1"
+    "json5": "^2.2.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0"
